--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,13 @@
 
 <div id="react-app">Loading...</div>
 
+
+<div id="app"></div>
+
+
+
+
+
 @section scripts {
     <script src="~/dist/main.js" asp-append-version="true"></script>
 }
