--- a/ClientApp/css/chat.css
+++ b/ClientApp/css/chat.css
@@ -1,5 +1,4 @@
-﻿
-<style class="cp-pen-styles" >/* ------ GENERAl LAYOUT ------ */
+﻿/* ------ GENERAl LAYOUT ------ */
 * {
     font-family: 'Roboto', sans-serif;
     margin: 0px;
@@ -300,7 +299,7 @@ i {
     margin: 0px 0px 10px auto;
 }
 
-.your-mouth {
+.you-mouth {
     width: 0;
     height: 0;
     border-bottom: 10px solid white;
@@ -310,7 +309,7 @@ i {
     left: -10px;
 }
 
-.my-mouth {
+.me-mouth {
     width: 0;
     height: 0;
     border-bottom: 10px solid #dcf8c6;
@@ -321,6 +320,7 @@ i {
 }
 
 .content {
+    word-wrap: break-word;
     margin: 0.5em 0;
     line-height: 120%;
     font-size: 0.9em;
